--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <section class="footer">
     <div class="footer-area">
         <p>STAY CONECTED</p>
-        <h4>ashraul@gmail.Com</h4>
+        <h4>ashraful@gmail.Com</h4>
         <div class="footer-pic">
             <img src="img/icon1.png" alt="">
             <img src="img/icon2.png" alt="">
