--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
-<!-- font awesome cdn -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
 
 
 
@@ -50,7 +49,7 @@
             <h2>Dream Big</h2>
          
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a  class="btn" target="_blank" href="https://www.flickr.com/photos/191374447@N05/"> <i class="fas fa-download"></i> Download Cv</a>
+            <a  class="btn" target="_blank" href="https://www.flickr.com/photos/191374447@N05/"> <img src="img/download.png" alt=""> Download Cv</a>
      </div>
     </section>
 
