--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div class="first-half">
          <img src="img/Group 33080.png" alt="">
         </div>
-        <div class="first-half">
-            <h2>Dream Big</h2>
+        <div class="first-half dream">
+            <h2>About</h2>
          
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
             <a  class="btn" target="_blank" href="https://www.flickr.com/photos/191374447@N05/"> <img src="img/download.png" alt=""> Download Cv</a>
